<resources>
    <string name="app_name">Kamix</string>
    <string name="intro_next">NEXT</string>
    <string name="intro_skip">SKIP</string>
    <string name="intro_got_it">GOT IT</string>
    <string name="slide1_title">Transfert</string>
    <string name="slide1_desc">Transfer Money for free to family and friends.</string>
    <string name="slide2_title">Payment</string>
    <string name="slide2_desc">Settle payments in 1000+ physical shops.</string>
    <string name="slide3_title">Funding</string>
    <string name="slide3_desc">Fund your account using mobile money.</string>
    <string name="slide4_title">Withdrawal</string>
    <string name="slide4_desc">Withdraw your funds to your mobile money.</string>
    <string name="activationaccount_text">Congratulations !\nYour Account is now</string>
    <string name="intro_title">Join a community of thousands of economic\nagents today !</string>
    <string name="tagline">\"Don\'t Be Dreamers,\nBe Researchers\"</string>
    <string name="tagline1">\"Your beliefs don\'t make you a better person.\nYour behavior does.\"</string>
    <string name="tagline2">\"The only difference between a good day\nand a bad day is your attitude.\"</string>
    <string name="tagline3">\"Train your mind too see good\nin every situation.\"</string>
    <string name="tagline4">\"If the plan doesn\'t work change the plan but,\nnever the goal.\"</string>
    <string name="terms_and_condition">Terms &amp; Conditions</string>
    <string name="register_bottom_text">To sign in, you must accept terms &amp; conditions.</string>
    <string name="register_confirm_bottom_text">Please enter your PIN code and password. You will be able to change them afterwards</string>
    <string name="termscondi_bottom_text">To sign in, you must accept terms &amp; conditions.</string>
    <string name="activationaccount_bottom_text">You are require to complete the KYC procedure for youraccount to be verified so you can make transactions</string>
    <string name="dashboard_user_info_setting">User infos &amp; settings</string>
    <string name="dashboard_invite_share">Invite family &amp; friends</string>
    <string name="graterthen">&gt;</string>
    <string name="signin_login_label">Sign In</string>
    <string name="secret_code_purpose">Please enter a secret code. You must retain it. You will use it for validate your differents transactions.</string>
    <string name="empty_secret_code">Please enter a secret code]</string>
    <string name="secret_code_doesnot_match">Secret code confirmation does not match</string>
    <string name="invalid_email">Error : Invalid email, please enter proper email address</string>
    <string name="empty_email">Error : Invalid email, please try again</string>
    <string name="empty_mobile">Error : Invalid mobile, please try again</string>
    <string name="invalid_mobile">Your mobile number is not conform to Cameroon mobiles numbers</string>
    <string name="mobile_email_purpose">Please enter your mobile number and your email. Mobile number is mandatory but email is not.\nYour password and PIN code will be sent to you via SMS and mail.</string>
    <string name="confirm_mobile_email_purpose">Temporary PIN code and password have been sent via SMS and mail respectively to your mobile number and email.\nYou can change your mobile and your email and ask for resend PIN and password.</string>
    <string name="empty_pin">Please enter your PIN Code</string>
    <string name="invalid_pin_length">Error : Enter 4 digit PIN</string>
    <string name="invalid_passwd">Error : Invalid Password, please try again</string>
    <string name="verified">Verified</string>
    <string name="unverified">Unverified</string>
    <string name="old_mobile_label">Old mobile number</string>
    <string name="new_mobile_label">New mobile number</string>
    <string name="pin_code_purpose">Enter your PIN code for validate mobile number modification</string>
    <string name="pin_code_label">PIN Code</string>
    <string name="modify">MODIFY</string>
    <string name="edit_mobile_header">Modify Mobile Number</string>
    <string name="add_mobile_header">Add Mobile Number</string>
    <string name="mobile_label">Mobile number</string>
    <string name="pin_code_purpose_add_mobile">Please enter your PIN Code for validate mobile adding</string>
    <string name="add">ADD MOBILE NUMBER</string>
    <string name="edit_email_header">Modify Email</string>
    <string name="old_email_label">Old Email</string>
    <string name="new_email_label">New Email</string>
    <string name="pass_code_purpose_for_email">Please enter your password for validate email modification.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verification_message_mobile">A verification code has been sent to you via SMS to your mobile number ????. Please enter this code to verify your mobile number.\nThis code will be not replace your PIN code.</string>
    <string name="verification_message_email">A verification code has been sent to you via mail to your email ????. Please enter this code to verify your mobile number.\nThis code will be not replace your PIN code.</string>
    <string name="confirm_label">Confirmation Code</string>
    <string name="skip_verification">VERIFY LATER</string>
    <string name="back_modify">BACK MODIFY</string>
    <string name="confirm">CONFIRM</string>
    <string name="please_wait">Please wait</string>
    <string name="connection_error">A connection problem occurs. Please check your internet connectivity.</string>
    <string name="problem_occurs">A problem occurs. Please try again later</string>
    <string name="invalid_phone_or_email">Your phone or your email is invalid</string>
    <string name="not_online">You are not online, please activate mobile data or WiFi.</string>
    <string name="are_you_sure_register">Are you that your mobile number is ????? and your email address is ???? ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="verifying_mobile">Verify Mobile Number</string>
    <string name="invalid_pin">PIN Code entered is not correct.</string>
    <string name="invalid_passwd_">Password entered is not correct.7</string>
    <string name="restart_verify_email">Email verification occurs error. You can skip and verify email later. Dou you want to skip?</string>
    <string name="skip_email_verif">SKIP</string>
    <string name="restart_email_verif">RETRY</string>
    <string name="email_verification_success">Your email has been verified successfully</string>
    <string name="mobile_verification_success">Your mobile number has been verified successfully. You can also verify your email or you can skip email verification. Do you can to verify email also?</string>
    <string name="mobile_verification_success_small">Your mobile number has been verified successfully.</string>
    <string name="verify_label">VERIFY</string>
    <string name="register_finalisation_error">Error occurs when finalizing your registration. Check your internet connection. Dou you want to retry?</string>
    <string name="edit_pin_header">Modify PIN Code</string>
    <string name="old_pin_label">Old PIN Code</string>
    <string name="new_pin_label">New PIN Code</string>
    <string name="confirm_new_pin_code_label">Confirm new PIN code</string>
    <string name="empty_pin_new">Please enter your new Pin code</string>
    <string name="match_old_new_pin">Old PIN and new PIN must be differents</string>
    <string name="match_new_pin_confirm">New PIN confirmation does not match with new PIN code</string>
    <string name="change_pin_successful">PIN Code changed successfully</string>
    <string name="edit_pass_header">Change Password</string>
    <string name="old_passwd_label">Old Password</string>
    <string name="new_passwd_label">New Password</string>
    <string name="confirm_new_passwd_label">Confirm new password</string>
    <string name="change_pass_successful">Your password has been change sucessfully</string>
    <string name="edit_firstname_label">Firstname</string>
    <string name="edit_userinfos_header">Modify User Infos</string>
    <string name="edit_lastname_label">Lastname</string>
    <string name="edit_address_label">Address</string>
    <string name="edit_city_label">City</string>
    <string name="would_like_retry"> Dou you want to retry?</string>
    <string name="read_contacts_permissions_denied">You have refused this application to read your contacts list.</string>
    <string name="existing_user">This user ???? has been registered with another phone. To log in with this ???? user account in this phone, you have to enter the pin code od this ???? acount.</string>
    <string name="existing_user_text">This mobile number and/or email is linked to another account. If it is your account, click on LOG IN to log in with this mobile number and/or email.</string>
    <string name="enter_pin_code">Enter PIN code</string>
    <string name="pin_forgotten">PIN CODE FORGOTTEN</string>
    <string name="login_label">LOG IN</string>
    <string name="close">CLOSE</string>
    <string name="incorrect_pin">The PIN code you enterred is incorrect. Try again...</string>
    <string name="pin_reset_success">Your PIN code has been reset successfully check your mails to get your new PIN code.</string>
    <string name="reset_pin_message">We will give you a new PIN code. We will send this code to you through your email address. You have to check your mails to get this code. Do you want to reset your PIN code?</string>
    <string name="mobile_modify_success">Mobile modified successfully</string>
    <string name="edit_mobile_confirm">Do you want to change ????? to ???? ?</string>
    <string name="delete_mobile_confirm">Are you sure that you want to remove ???? from your mobile numbers ? If yes, enter your PIN code.</string>
    <string name="confirm_email_address">Confirm Email Address</string>
    <string name="confirm_email_address_message">Enter the verification code sent to ???? to confirm your email. This password and yours are differents and this password will not replace your password.</string>
    <string name="confirm_later">CONFIRM LATER</string>
    <string name="confirm_pass_label">Confirmation password</string>
    <string name="confirm_mobile_address">Confirm Mobile Number</string>
    <string name="confirm_mobile_address_message">Enter the verification code sent via SMS to ???? to confirm your mobile number. This code and your PIN code are differents. This code will not replace your PIN code.</string>
    <string name="confirm_pin_label">Confirmation code</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">PROCEED</string>
    <string name="payment_question">What do you want to do about payment ?</string>
    <string name="accept_payment">ACCEPT PAYMENT</string>
    <string name="proceed_payment">PROCEED PAYMENT</string>
    <string name="funding_instructions">On your phone, compose #150*1*1*695636035*_AMOUNT_TO_PAY_*YOUR SECRET CODE#</string>
    <string name="operator_tid">Enter Operation transaction id received from mobile operator</string>
    <string name="operator_tid_label">Operator Transaction ID</string>
    <string name="signup_title">SIGN UP</string>
    <string name="final_step">Final Step</string>
    <string name="final_step_purpose">Please enter your names to finalize inscription. You must enter firstname and lastname</string>
    <string name="firstname_hint">Firstname</string>
    <string name="lastname_hint">Lastname</string>
    <string name="finalize_inscription">FINALIZE INSCRIPTION</string>
    <string name="funding_instructions_title">Funding Instructions</string>
    <string name="pin_code_setaspn">Enter your PIN code to validate the modification.</string>
    <string name="validate">VALIDATE</string>
    <string name="compose">COMPOSE</string>
</resources>