<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kamixui.activities.FundingInstructionsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            app:titleTextColor="@color/white"
            app:title="@string/funding_instructions_title"
            app:navigationIcon="@drawable/ic_nav_arrow_back"></android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#BB000000"
                android:textSize="18sp"
                android:textStyle="italic"
                android:id="@+id/funding_instructions"
                android:text="@string/funding_instructions"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/compose"
                android:textStyle="bold"
                android:id="@+id/compose"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#BB000000"
                android:textSize="16sp"
                android:text="@string/operator_tid"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"/>

            <EditText
                android:id="@+id/operator_tid"
                style="@style/signin_edittext_style"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:hint="@string/operator_tid_label"
                android:inputType="numberPassword"
                android:maxLength="4"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="8dp">

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/cancel"
                    android:id="@+id/cancel"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="8dp"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/proceed"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:paddingRight="12dp"
                    android:paddingLeft="12dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_alignParentRight="true"
                    android:text="@string/proceed"
                    android:layout_marginRight="12dp"/>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>