<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFinalFragment"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:text="@string/signup_title"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                app:srcCompat="@drawable/logo_inverted"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:layout_margin="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/final_step"
                        android:layout_marginTop="4dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/final_step_purpose"
                        android:padding="4dp"/>

                    <EditText
                        android:id="@+id/firstname"
                        style="@style/signin_edittext_style"
                        android:layout_marginTop="8dp"
                        android:hint="@string/firstname_hint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textStyle="normal"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/lastname"
                        style="@style/signin_edittext_style"
                        android:layout_marginTop="4dp"
                        android:hint="@string/lastname_hint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textStyle="normal"
                        android:textColor="@color/black"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                style="@style/orange_submit_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="18dp"
                android:id="@+id/finalize"
                android:text="@string/finalize_inscription"
                android:textColor="@color/colorPrimaryDark"/>

            
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>