<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kamixui.fragments.SetAsPNPINFragment"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin_code_setaspn"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:layout_marginTop="4dp"/>

        <EditText
            android:id="@+id/etPin"
            style="@style/signin_edittext_style"
            android:layout_marginTop="16dp"
            android:hint="@string/pin_code_label"
            android:inputType="numberPassword"
            android:maxLength="4"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="8dp">

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="8dp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/consult"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:layout_height="50dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_alignParentRight="true"
                android:text="@string/validate"
                android:layout_marginRight="12dp"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>