<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.PaymentChoiceFragment"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/payment_question"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="4dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/accept_payment"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:id="@+id/accept_payment"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/proceed_payment"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:id="@+id/proceed_payment"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"/>

</LinearLayout>